<resources>
    <string name="app_name">₹ EDU</string>
    <string name="signin">Sign In</string>
    <string name="dont_have_account">Don\'t have an account, SignUp</string>
    <string name="problem_text">Problem Logging In</string>
    <string name="password">Password</string>
    <string name="email">Email Id</string>
    <string name="sign_up">SIGN UP</string>
    <string name="full_name">Enter Full Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_password_again">Confirm Password</string>
    <string name="enter_phone">Enter Contact Details</string>
    <string name="signup">Sign Up</string>
    <string name="activity_redu_main_screen_cs">Computer Science</string>
    <string name="activity_redu_main_screen_ece">Electronics</string>
    <string name="activity_redu_main_screen_com">Commerce</string>
    <string name="activity_redu_main_screen_cp">Competitive Exams</string>
    <string name="activity_redu_main_screen_areas_of_interest">Area of Interest</string>
</resources>
