<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="true"
    android:focusableInTouchMode="true"
    android:gravity="center"
    tools:context="testing.example.com.r_edu.SignInActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:layout_weight="0.5"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/activity_signin_image_view"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:src="@drawable/ic_saving_money_for_study" />

                <TextView
                    android:id="@+id/activity_signin_app_name_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="cursive"
                    android:text="@string/app_name"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:textSize="40sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="0.5"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center|top"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/activity_signin_username_edit_text"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/white"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:textColorLink="@android:color/white"
                    android:textCursorDrawable="@null" />


                <EditText
                    android:id="@+id/activity_signin_password_edit_text"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/white"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:layout_marginTop="32dp"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:textColorLink="@android:color/white"
                    android:textCursorDrawable="@null" />


                <Button
                    android:id="@+id/activity_signin_singin_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/button_ripple"
                    android:paddingLeft="64dp"
                    android:paddingRight="64dp"
                    android:shadowColor="@android:color/white"
                    android:text="@string/signin"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/activity_signin_signup_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/dont_have_account"
                    android:textColor="@android:color/white" />

            </LinearLayout>

            <TextView
                android:id="@+id/activity_signin_problem_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="#651FFF"
                android:gravity="center"
                android:padding="24dp"
                android:text="@string/problem_text"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

        </LinearLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>



