<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_redu_main_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="testing.example.com.r_edu.MainScreen">
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:textSize="36sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:fontFamily="cursive"
        android:textColor="@android:color/white"
        android:text="@string/activity_redu_main_screen_areas_of_interest"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="110dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginRight="12dp"
                    android:src="@drawable/ic_saving_money_for_study" />

                <RadioButton
                    android:id="@+id/activity_redu_main_screen_cs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/activity_redu_main_screen_cs"
                    android:textSize="24sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginRight="12dp"
                    android:src="@drawable/ic_saving_money_for_study" />

                <RadioButton
                    android:id="@+id/activity_redu_main_screen_ece"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/activity_redu_main_screen_ece"
                    android:textSize="24sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginRight="12dp"
                    android:src="@drawable/ic_saving_money_for_study" />

                <RadioButton
                    android:id="@+id/activity_redu_main_screen_com"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/activity_redu_main_screen_com"
                    android:textSize="24sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginRight="12dp"
                    android:src="@drawable/ic_saving_money_for_study" />

                <RadioButton
                    android:id="@+id/activity_redu_main_screen_cp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/activity_redu_main_screen_cp"
                    android:textSize="24sp" />

            </LinearLayout>

        </LinearLayout>


    </android.support.v7.widget.CardView>

</RelativeLayout>
